--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "auto-bind": "^4.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "moment-jalali": "^0.3.9",
     "mongoose": "^8.0.2",
     "swagger-jsdoc": "^6.2.8",
